# Repo_Analyzer

./: .gitignore  Dockerfile  README.md  analyze_repo.py  analyzer_enhanced.py  cli_enhanced.py  docker-compose.yml  pyproject.toml  results.json  setup.py
data/patterns/: react_patterns.json
examples/: ai_analyzer_example.py  basic_example.py  tech_landscape.py
repo_analyzer/: __init__.py  analyzer.py  cli.py  config.py
repo_analyzer/ai/: __init__.py  ai_detector.py  ai_integration.py  prompt_templates.py  recommendation_engine.py
repo_analyzer/detectors/: architecture_detector.py  build_detector.py  database_detector.py  devops_detector.py  framework_detector.py  frontend_detector.py  language_detector.py  testing_detector.py
repo_analyzer/utils/: ai_utils.py  file_utils.py
results/: dashboard.html  tech_report.html
src/tech_extraction/: __init__.py  cli.py  config.py
src/tech_extraction/ai/: __init__.py  context_management.py  prompt_engineering.py  provider_management.py
src/tech_extraction/api/: __init__.py  main.py
src/tech_extraction/core/: __init__.py  file_collection.py  language_detection.py
src/tech_extraction/dependency/: __init__.py  import_analyzer.py  package_manifest.py
src/tech_extraction/evidence/: __init__.py  confidence_scoring.py  evidence_collection.py  false_positive_mitigation.py
src/tech_extraction/framework/: __init__.py  architectural_pattern.py  signature_detection.py
src/tech_extraction/models/: __init__.py  architecture.py  dependency.py  evidence.py  file.py  framework.py  metadata.py  technology.py
src/tech_extraction/optimization/: __init__.py  caching.py  cost_optimization.py  parallel_processing.py
src/tech_extraction/results/: __init__.py  output_generation.py  technology_aggregation.py  (+1 more)
tests/: test_ai_detector.py  test_ai_integration.py  test_analyzer.py
(+4 files in other folders)
